🐛 fix(update_notifications): Use tag instead of action_data for entity_id
The Mobile App sends the entity_id via the 'tag' field, not 'action_data.entity_id'.
Fixed callback handling to match the working reference blueprint:

- Changed callback_entity_id to extract from trigger.event.data.tag
- Updated all notifications to use tag without 'update_' prefix
- Added support for both action and actionName (iOS compatibility)
- Added support for both underscore and hyphen action names
- Kept action_data.tag for iOS compatibility

Version bumped to 2.2.0

--- a/update_notifications/update_notifications.yaml
+++ b/update_notifications/update_notifications.yaml
@@ -1,8 +1,8 @@
-# Version: 2.1.0
+# Version: 2.2.0
 blueprint:
   name: "🔄 Update Notifications"
   description: >
-    📦 [Version 2.1.0] Get notified about Home Assistant updates via Mobile App!
+    📦 [Version 2.2.0] Get notified about Home Assistant updates via Mobile App!
     Receive notifications when updates are available for core, addons, or integrations.
     Includes actionable buttons to install or skip updates directly from the notification. 🚀
   domain: automation
@@ -216,8 +216,15 @@ variables:
         {{ u }}
     {% endfor %}
   # Callback variables - Mobile App
-  callback_action: "{{ trigger.event.data.action | default('') if trigger.id == 'mobile_callback' else '' }}"
-  callback_entity_id: "{{ trigger.event.data.action_data.entity_id | default('') if trigger.id == 'mobile_callback' else '' }}"
+  callback_action: "{{ trigger.event.data.action | default(trigger.event.data.actionName | default('')) if trigger.id == 'mobile_callback' else '' }}"
+  callback_entity_id: >
+    {% if trigger.id == 'mobile_callback' %}
+      update.{{ trigger.event.data.tag
+        if trigger.event.data.tag is string and trigger.event.data.tag != ''
+        else trigger.event.data.action_data.tag | default('') }}
+    {% else %}
+
+    {% endif %}
   callback_friendly_name: "{{ state_attr(callback_entity_id, 'friendly_name') | default(callback_entity_id, true) }}"
 
 action:
@@ -241,7 +248,7 @@ action:
                   title: "✅ Update Complete"
                   message: "{{ friendly_name }} update completed!"
                   data:
-                    tag: "update_{{ entity_id }}"
+                    tag: "{{ entity_id[7:] }}"
 
         - alias: Dismiss HA notification if enabled
           if:
@@ -292,10 +299,10 @@ action:
                       - action: skip_update
                         title: "⏭️ Skip"
                     action_data:
-                      entity_id: "{{ entity_id }}"
+                      tag: "{{ entity_id[7:] }}"
+                    tag: "{{ entity_id[7:] }}"
                     url: "{{ release_url if release_url else '/config/updates' }}"
                     clickAction: "{{ release_url if release_url else '/config/updates' }}"
-                    tag: "update_{{ entity_id }}"
 
         - alias: Send to HA if enabled
           if:
@@ -352,7 +359,7 @@ action:
                   title: "⏳ Updating..."
                   message: "{{ friendly_name }} is updating..."
                   data:
-                    tag: "update_{{ entity_id }}"
+                    tag: "{{ entity_id[7:] }}"
 
     # ════════════════════════════════════════════════════════════════════════
     # CONFIG CHECK COMPLETED
@@ -385,8 +392,8 @@ action:
                       - action: skip_update
                         title: "⏭️ Skip"
                     action_data:
-                      entity_id: "{{ entity_id }}"
-                    tag: "config_check_{{ entity_id }}"
+                      tag: "{{ entity_id[7:] }}"
+                    tag: "config_check_{{ entity_id[7:] }}"
 
     # ════════════════════════════════════════════════════════════════════════
     # HA STARTUP - DISMISS OLD NOTIFICATIONS
@@ -457,8 +464,8 @@ action:
                                 - action: skip_update
                                   title: "⏭️ Skip"
                               action_data:
-                                entity_id: "{{ repeat.item }}"
-                              tag: "reminder_{{ repeat.item }}"
+                                tag: "{{ repeat.item[7:] }}"
+                              tag: "reminder_{{ repeat.item[7:] }}"
 
     # ════════════════════════════════════════════════════════════════════════
     # MOBILE APP CALLBACK - INSTALL UPDATE
@@ -466,7 +473,7 @@ action:
     - alias: Handle Mobile App install callback
       conditions:
         - "{{ trigger.id == 'mobile_callback' }}"
-        - "{{ callback_action == 'install_update' }}"
+        - "{{ callback_action in ['install_update', 'install-update'] }}"
       sequence:
         - alias: Log callback data for debugging
           action: system_log.write
@@ -502,7 +509,7 @@ action:
     - alias: Handle Mobile App skip callback
       conditions:
         - "{{ trigger.id == 'mobile_callback' }}"
-        - "{{ callback_action == 'skip_update' }}"
+        - "{{ callback_action in ['skip_update', 'skip-update'] }}"
       sequence:
         - alias: Log callback data for debugging
           action: system_log.write
